// Vitest Snapshot v1

exports[`Slider component > renders 1`] = `
<div>
  <span
    aria-disabled="false"
    class="c-eqsMSy c-eqsMSy-dOexvR-theme-tonal"
    data-orientation="horizontal"
    style="--radix-slider-thumb-transform: translateX(-50%);"
  >
    <span
      class="c-nJgcq"
      data-orientation="horizontal"
    >
      <span
        class="c-bOJGDH"
        data-orientation="horizontal"
        style="left: 0%; right: 50%;"
      />
    </span>
    <span
      style="transform: var(--radix-slider-thumb-transform); position: absolute; left: calc(50% + 0px);"
    >
      <span
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="50"
        class="c-gCMpHY"
        data-orientation="horizontal"
        data-radix-collection-item=""
        role="slider"
        style=""
        tabindex="0"
      />
    </span>
  </span>
</div>
`;

exports[`Slider component > renders with a steps list 1`] = `
<div>
  <span
    aria-disabled="false"
    class="c-eqsMSy c-eqsMSy-dOexvR-theme-tonal"
    data-orientation="horizontal"
    steps="[object Object],[object Object],[object Object]"
    style="--radix-slider-thumb-transform: translateX(-50%);"
  >
    <span
      class="c-nJgcq"
      data-orientation="horizontal"
    >
      <span
        class="c-bOJGDH"
        data-orientation="horizontal"
        style="left: 0%; right: 50%;"
      />
    </span>
    <span
      style="transform: var(--radix-slider-thumb-transform); position: absolute; left: calc(50% + 0px);"
    >
      <span
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="50"
        class="c-gCMpHY"
        data-orientation="horizontal"
        data-radix-collection-item=""
        role="slider"
        style=""
        tabindex="0"
      />
    </span>
  </span>
</div>
`;

exports[`Slider.Value component > renders 1`] = `
<div>
  <p
    class="c-fIXJvv c-fIXJvv-gvmVBy-size-md c-fIXJvv-iQwDky-css"
  >
    Current value is 50
  </p>
</div>
`;
